# chain_lit_motor_ins_bot

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
.chainlit/: Dockerfile
data/: Methaq_Prices.csv  NGI_Prices.csv
