[project]
name = "chatbot-with-chainlite"
version = "0.1.0"
description = "A chatbot powered by Chainlit and OpenAI agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents>=0.0.17",
    "python-dotenv>=1.1.0",
    # Add more if needed
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["chatbot_with_chainlite"]  # Adjust based on your actual package/module structure
